--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-secp256kfun = "0.7"
+secp256kfun = {  version = "0.7", features = ["serde"] }
 rand = "0.8"
 anyhow = "1"
 schnorr_fun = "0.7"
-sigma_fun = "0.4"
+sigma_fun = {  version = "0.4", features = ["serde"] }
 sha2 = "0.9"
 rand_chacha = "0.3"
+bincode = {  version = "2.0.0-rc.1", features = ["serde"] }
+serde = { version = "1" }
 clap = {  version = "3", features = ["derive"] }
