--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.7"
+rand = "0.8"
 anyhow = "1"
-zkp = {  version = "0.8", features = ["u64_backend"] }
-curve25519-dalek = { package = "curve25519-dalek-ng", version = "3", default-features = false, features = ["serde", "std"] }
+zkp = {  git = "https://github.com/LLFourn/zkp.git", features = ["simd_backend"] }
+curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["serde", "std", "simd_backend"] }
 sha2 = "0.9"
-rand_chacha = "0.3"
 bincode = {  version = "2.0.0-rc.1", features = ["serde"] }
 serde = { version = "1" }
 clap = {  version = "3", features = ["derive"] }
